--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,3 +10,15 @@ header > h1 {
 	font-family: "Dancing Script", cursive;	
 	font-size: 4rem;
 }
+
+@media screen and ( max-width: 480px ) {
+
+	header {
+		display: block;
+	}
+
+	header > h1 {
+		text-align: center;
+	}
+
+}
